# TCPCafe

./: .gitmodules  CMakeLists.txt  README.md
.github/ISSUE_TEMPLATE/: bug-report.md
cmake/: Findimgui.cmake  imgui-node-editor.cmake  lua.cmake  nlohmann-json.cmake  sol2.cmake
default_modules/: Math_Add.lua  Math_Div.lua  Math_Mul.lua  Math_PI.lua  Math_Sqrt.lua  Math_Sub.lua  Output_Print.lua
src/: Application.cpp  Application.h  main.cpp
src/Modules/: Module.h  ModuleManager.cpp  ModuleManager.h
src/Nodes/: AddNode.cpp  AddNode.h  BooleanDisplayNode.cpp  BooleanDisplayNode.h  BooleanOperatorNode.cpp  BooleanOperatorNode.h  ButtonNode.cpp  ButtonNode.h  ClientSendNode.cpp  ClientSendNode.h  ClonableNode.h  ConcatNode.cpp  ConcatNode.h  GlobalID.cpp  GlobalID.h  IntNode.cpp  IntNode.h  Link.h  LuaNode.cpp  LuaNode.h  Node.cpp  Node.h  NodeManager.cpp  NodeManager.h  NumberNode.cpp  NumberNode.h  Pin.cpp  Pin.h  PrintNode.cpp  PrintNode.h  StringNode.cpp  StringNode.h  SubtractNode.cpp  SubtractNode.h  TCPClientNode.cpp  TCPClientNode.h  TCPServerNode.cpp  TCPServerNode.h  TimerNode.cpp  TimerNode.h  (+4 more)
src/Window/: FileDialogue.h  FileManager.cpp  FileManager.h  Window.cpp  Window.h
